<resources>
    <string name="app_name">Tugas2_Kalkulatorr</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnresult">=</string>
    <string name="btnmulti">*</string>
    <string name="btnplus">+</string>
    <string name="btnmin">-</string>
    <string name="btndevide">/</string>
    <string name="btnclear">Clear</string>
    <string name="Textresult">Result</string>
    <string name="TextControl">Control</string>
</resources>
