<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="332dp"
        android:text="@string/btn9" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="332dp"
        android:layout_toEndOf="@+id/button9"
        android:text="@string/btn8" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="332dp"
        android:layout_toEndOf="@+id/button8"
        android:text="@string/btn7" />

    <Button
        android:id="@+id/buttonbagi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="332dp"
        android:layout_toEndOf="@id/button7"
        android:text="@string/btndevide" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button9"
        android:layout_marginStart="12dp"
        android:layout_marginTop="58dp"
        android:text="@string/btn6" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button8"
        android:layout_marginStart="12dp"
        android:layout_marginTop="58dp"
        android:layout_toEndOf="@id/button6"
        android:text="@string/btn5" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonbagi"
        android:layout_marginStart="13dp"
        android:layout_marginTop="58dp"
        android:layout_toEndOf="@id/button5"
        android:text="@string/btn4" />

    <Button
        android:id="@+id/buttonkali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonbagi"
        android:layout_marginStart="12dp"
        android:layout_marginTop="58dp"
        android:layout_toEndOf="@id/button4"
        android:text="@string/btnmulti" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button6"
        android:layout_marginStart="12dp"
        android:layout_marginTop="58dp"
        android:text="@string/btn3" />


    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button5"
        android:layout_marginStart="12dp"
        android:layout_marginTop="58dp"
        android:layout_toEndOf="@id/button3"
        android:text="@string/btn2" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button4"
        android:layout_marginStart="13dp"
        android:layout_marginTop="58dp"
        android:layout_toEndOf="@id/button2"
        android:text="@string/btn3" />

    <Button
        android:id="@+id/buttonplus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonkali"
        android:layout_marginStart="13dp"
        android:layout_marginTop="58dp"
        android:layout_toEndOf="@id/button1"
        android:text="@string/btnmin" />

    <Button
        android:id="@+id/buttonclear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button3"
        android:layout_marginStart="12dp"
        android:layout_marginTop="58dp"
        android:text="@string/btnclear" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:layout_marginStart="13dp"
        android:layout_marginTop="58dp"
        android:layout_toEndOf="@id/buttonclear"
        android:text="@string/btn0" />

    <Button
        android:id="@+id/buttonsamadengan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button1"
        android:layout_marginStart="12dp"
        android:layout_marginTop="58dp"
        android:layout_toEndOf="@id/button0"
        android:text="@string/btnresult" />

    <Button
        android:id="@+id/buttonkurang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonplus"
        android:layout_marginStart="13dp"
        android:layout_marginTop="58dp"
        android:layout_toEndOf="@id/buttonsamadengan"
        android:text="@string/btnmin" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="85dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="317dp"
        android:layout_marginTop="131dp"
        android:text="@string/Textresult"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="80dp"
        android:layout_height="31dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="320dp"
        android:layout_marginTop="57dp"
        android:text="@string/TextControl"
        android:textAlignment="center"/>


</RelativeLayout>